--- a/virtual_lab/src/angularjs_framework/app/index.html
+++ b/virtual_lab/src/angularjs_framework/app/index.html
@@ -1,20 +1,247 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" ng-app="virtualab">
-<head>
-  <meta charset="utf-8">
-  <title>HuNI Virtual Laboratory</title>
-  <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <script src="lib/angular/angular.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
-  <script src="lib/angular/angular-resource.js"></script>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <title>HuNI Virtual Laboratory | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A virtual laboratory for humanities researchers based on semantic web principles.">
+    <meta name="author" content="Spencer Wu (Intersect), Richard Rothwell (VeRSI)">
 
-  <div ng-view></div>
+    <!-- Le styles -->
+    <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+	<link href="lib/angular-ui/angular-ui.css" rel="stylesheet">
+	<link href="./css/3column.css" rel="stylesheet">	
+	
+<!-- RR: verify that this is needed considering the current bootstrap distribution.    
+	<link href="css/bootstrap-responsive.css" rel="stylesheet">
+ -->
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
 
-</body>
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="ico/favicon.png">
+  </head>
+
+  <body id="index">
+
+    <div class="navbar"> <!-- header start -->
+      <div class="navbar-inner">
+        <div class="container">
+
+          <div id="user-information"> <!-- user information -->
+            <ul>
+             <li>Have you registered?</li>
+              <li><a href="#registrationModal" role="button" data-toggle="modal">Register</a></li>  |
+              <li><a href="#loginModal" role="button" data-toggle="modal">Login</a></li>|
+              <li><a href="#">Find Out More</a></li>
+            </ul>         
+
+    <!-- Button to trigger modal -->
+     
+    <!-- Modal -->
+    <div id="registrationModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="modalLabel">New User Registration</h3>
+    </div>
+    <div class="modal-body">
+   
+<form id="registration-form " class="">
+
+    <div class="control-group">
+    <label class="control-label" for="inputUsername">Username*</label>
+    <div class="controls">
+    <input type="text" id="inputUsername" placeholder="Username">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputFirstName">First Name*</label>
+    <div class="controls">
+    <input type="text" id="inputFirstName" placeholder="First Name">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputLastName">Last Name*</label>
+    <div class="controls">
+    <input type="text" id="inputLastName" placeholder="Last Name">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputEmail">Email Address*</label>
+    <div class="controls">
+    <input type="text" id="inputEmail" placeholder="Email Address">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputInstitution">Institution</label>
+    <div class="controls">
+    <input type="text" id="inputInstitution" placeholder="Institution">
+    </div>
+    </div>
+
+    </div>
+    <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    <button class="btn btn-primary">Submit</button>
+    </div>
+    </div>
+  </form>
+
+          </div>
+
+ <div id="loginModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="modalLabel">Researcher Login</h3>
+    </div>
+    <div class="modal-body">
+
+
+          <div class="modal-body">
+   
+<form id="login-form" class="" >
+
+    <div class="control-group">
+    <label class="control-label" for="inputUsername">Username</label>
+    <div class="controls">
+    <input type="text" id="inputUsername" placeholder="Username">
+    </div>
+    </div>
+
+    <div class="control-group">
+    <label class="control-label" for="inputPasword">Password</label>
+    <div class="controls">
+    <input type="text" id="inputPassword" placeholder="Password">
+    </div>
+    </div>
+
+    <p>Not a registered user? Click here to create an account.</p>
+    <p>Forgot your password? Click here to retrieve it.</p>
+
+    </div>
+    <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    <button class="btn btn-primary">Submit</button>
+    </div>
+    </div>
+  </form>
+
+          </div>
+
+
+
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <!-- navigation toggle button -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" ng-href="#/landing">HuNI Virtual Lab</a>
+          <div class="nav-collapse collapse"> <!-- primary navigation -->
+            <ul class="nav  nav-pills">
+              <li class="active"><a href="index.html">Home</a></li>
+			<li class="dropdown"><a   class="dropdown-toggle" data-toggle="dropdown" href="#">About HuNI<b class="caret"></b></a>
+             	<ul class="dropdown-menu">
+	              <li><a ng-href="#/about">The HuNI Project</a></li>  
+	              <li><a ng-href="#/members-partners">Members/Partners</a></li>
+              		<li><a ng-href="#/contact">Contact</a></li>
+              	</ul>
+              </li>
+              <li><a ng-href="#/advanced-search">Browse/Search</a></li>
+              <li><a ng-href="#/workspace">Workspace</a></li>
+              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Humanities Data<b class="caret"></b></a>
+		          	<ul class="dropdown-menu">
+		              <li><a ng-href="#/huni-aggregate">The HuNI Aggregate</a></li>  
+		              <li><a ng-href="#/dataset-directory">HuNI Data Providers</a></li>
+		              <li><a ng-href="#/dataset-directory">Internet Sources</a></li>
+	              	</ul>
+               </li>
+              <li><a ng-href="#/help">Tutorials/Help</a></li>
+              <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Demo<b class="caret"></b></a>
+              	<ul class="dropdown-menu">
+	              <li><a ng-href="#/person">Person Record</a></li>
+	              <li><a ng-href="#/group">Group Record</a></li>  
+              	</ul>
+              </li>
+             </ul>
+          </div>
+        </div>
+      </div>
+    </div> <!-- header end -->
+
+	<div ng-view></div> 
+
+    <footer> <!-- footer start -->
+      <div class="row-fluid">
+      <div class="footer-column span4">
+        <p>&copy; 2012 HuNI HuNI is proud to be working in partnership with the NeCTAR (National eResearch Collaboration Tools and Resources) project to create an online research community around Australia's cultural datasets. This project will benefit Australian researchers by providing them with access to a wealth of combined resources and the tools with which to analyse and share them, thus enhancing their research outcomes. </p>
+      </div>
+      
+      <div class="footer-column span4">
+        <h4>Brought to you by:</h4>
+        <a href="#"><img src="img/logo_nectar.gif" width="176" height="99" alt="Nectar" /></a>
+        <a href="#"><img src="img/logo_deakin.gif" width="98" height="99" alt="Deakin" /></a>
+      </div>
+
+      <div class="footer-column span4">
+        <h4>Connect with us!</h4>
+        <div id="footer-social">
+        <a href="#"><img src="img/img_facebook.gif" /></a> <a href="#"><img src="img/img_google.gif" /></a> <a href="#"><img src="img/img_twitter.gif" /></a> <a href="#"><img src="img/img_skype.gif" /></a> <a href="#"><img src="img/img_linkedin.gif" /></a>
+      </div>
+      </div>
+    </div>
+    </footer> <!-- footer end -->
+    </div>
+
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+		
+		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="lib/bootstrap/js/bootstrap.js"></script>
+		<script src="lib/angular/angular.js"></script>
+		<script src="lib/angular/angular-resource.js"></script>
+		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.js"></script>
+		
+		<script src="js/app.js"></script>
+		<script src="js/controllers.js"></script>
+		<script src="js/filters.js"></script>
+		<script src="js/services.js"></script>
+		<script src="js/directives.js"></script>
+		<script src="lib/angular/angular-resource.js"></script>
+
+<!-- 		<script src="js/huniaggregate/app.js"></script>
+		<script src="js/huniaggregate/controllers.js"></script>
+		<script src="js/huniaggregate/filters.js"></script>
+		<script src="js/huniaggregate/services.js"></script>
+		<script src="js/huniaggregate/directives.js"></script>
+ -->
+		<!-- /shindig-project/content/README 
+	    <script type="text/javascript" src="../../js/shindig-container:rpc.js?c=1"></script>
+	     -->
+		<!-- /shindig-project/content/samplecontainer/samplecontainer.html 
+		<script type="text/javascript" src="../gadgets/js/core:rpc:pubsub:shindig-container.js?c=1&debug=1"></script>
+		 -->
+		<!-- /shindig-project/content/samplecontainer/examples/commoncontainer/index.html --> 
+		<!-- 	<script type="text/javascript" src="http://localhost:8080/shindig-server/gadgets/js/container:open-views:opensearch:rpc:xmlutil:pubsub-2.js?c=1&debug=1&container=default"></script> -->	
+		<script type="text/javascript" src="/shindig-server/gadgets/js/container:open-views:opensearch:rpc:xmlutil:pubsub-2.js?c=1&debug=1&container=default"></script>
+	
+		<script type="text/javascript" src="./opensocial/assembler.js"></script>
+		<script type="text/javascript" src="./opensocial/viewController.js"></script>
+		<script type="text/javascript" src="./opensocial/cconviews.js"></script>
+		<script type="text/javascript" src="./opensocial/search.js"></script>
+
+  </body>
 </html>
